* Changed Graph#triples to take optional subject predicate and object to match statements.
* Renamed Graph#bind o Graph#merge!
* Graph#triples yields triples if a block is provided
* Changed Namespace#short to Namespace#prefix
* Change BNode to require a graph. Most uses go from graph.bnode, rather than BNode.new. This is required because bnodes are only equivalent within the same graph
* Added identifier to Graph, defaults to BNode. This from Python librdf based on TriX recommendation, see: http://www.w3.org/2004/03/trix/
* Only add triple to graph if it does not already exist in graph.
* Added Graph#contains? to look for existance of triple.
* Added Graph#eql? (and ===) to do simple check for graph equality. This version ignores BNodes (like Python librdf)
* Prepend "named" to named BNodes to ensure no overlap between generated and named BNodes.
* Added Graph#clone and Triple#clone
* Merge Graphs, replacing BNodes with new values from new graph.
* Remove duplicate triples when adding or merging graphs
* Added Abstract Store and List Store.
* Delegate Graph methods to store. Currently only supports :list.

=== 0.1.5
* Update RDFa tests to use Reddy RDF/XML parser.
* All negative RDF/XML parser tests pass.
* Add Reddy::Parser, super-class of other parsers and move common code.
* Change N3Parser to use same new/parse logic as other parsers.
* Remove debug array by default, and add in calls to tests.
=== 0.1.4
* Update N3 treetop parser to version 1.4.0 (no digits in parser rule names).
* Fix N3 literal handling (still has bug with escaped double quote).
* Handle N3 <#> prefix.
* Don't output lang for typed literals in n3 format
* Rewrite of RDF/XML parser based on spec; passes existing tests.
* Update rdfcore tests based on rdfa test harness.
* Move Literal string escape/unescape to string_hacks.
* Fix literal n3_encoded parsing.
* All positive RDF/XML parser tests pass.

=== 0.1.3
* Added rdfa-test-suite as sub-module and refactored RDFa tests to use them.