@@ -1,4 +1,4 @@
-<$TCPATH/0115.xhtml> <http://www.example.com/entity> "<string>" .
-<$TCPATH/0115.xhtml> <http://www.example.com/entity> "Ben & Co." .
-<$TCPATH/0115.xhtml> <http://www.example.com/entity> "@" .
-<$TCPATH/0115.xhtml> <http://www.example.com/entity> "@" .
+<$TCPATH/0115.xhtml> <http://www.example.com/entity1> ">" .
+<$TCPATH/0115.xhtml> <http://www.example.com/entity2> "Ben & Co." .
+<$TCPATH/0115.xhtml> <http://www.example.com/entity3> "@" .
+<$TCPATH/0115.xhtml> <http://www.example.com/entity4> "@" .
